# Game-Engine-Arch-Portolio

./: README.md
ECS_Pong/: CMakeLists.txt
ECS_Pong/assets/scripts/: ia.lua
ECS_Pong/src/: main.cpp
ECS_Pong/src/ECS/: Components.h
ECS_Pong/src/Game/: Game.cpp
ECS_Pong/src/Page1/: Components.h  Page1.cpp  Page1.h  Systems.cpp  Systems.h
ECS_Pong/src/Scene/: Scene.cpp
ECS_Pong/src/Scripting/: scriptManager.cpp  scriptManager.h
spriteManipulation/assets/Maps/: Map1.txt
spriteManipulation/assets/Sprites/Player/: Sprite-0001.aseprite
spriteManipulation/include/: print.h
spriteManipulation/src/: main.cpp
spriteManipulation/src/ECS/: Components.h  Entity.h  System.h
spriteManipulation/src/Game/: Game.cpp  Game.h
spriteManipulation/src/Game/Graphics/: DungeonTileType.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tile.h
spriteManipulation/src/Page1/: Components.h  Page1.cpp  Page1.h
spriteManipulation/src/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
spriteManipulation/src/spriteManipulation/: Components.h  Shaders.h  Systems.cpp  Systems.h  spManipulation.cpp  spManipulation.h
